<resources>
    <string name="app_name">Farmershop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login_using_otp">Login using OTP?</string>
    <string name="i_agree">I am agree with terms and conditions.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="mobile_number_or_emaild_id">Mobile Number or Emaild Id</string>
    <string name="something_went_wrong">Something Went Wrong!! Try Again</string>
    <string name="no_internet">No Internet Connection!! Try Again</string>
    <string name="no_data">No Data Found!!</string>
    <string name="welcome_to_mediface">Welcome to Farmershop</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="email">Email</string>
    <string name="email_and_mobile">Email/Mobile</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="app_version">App Version</string>
    <string name="resnd_otp">Resnd OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="_11_12_00">11:12:00</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_sent_to_your_mobile_number">OTP sent to your mobile number</string>
    <string name="userid">UserId</string>
    <string name="GOOGLE_MAP_KEY_NEW">AIzaSyCPoTpFZCEOEW9y0HHmY4rmoY6kXzR4DjU</string>
    <string name="shared_pref">SHARED_PREF</string>
    <string name="search_location">Search for area, landmark or apartment</string>
    <string name="current_location">Choose Current Location</string>
    <string name="error">Google Api key is missing.</string>
    <string name="search_product">Search Product</string>
    <string name="category">Category</string>
    <string name="see_all">See All</string>
    <string name="top_ffers">Top Offers</string>
    <string name="most_selling_product">Most Selling</string>
    <string name="products">Shop By Products</string>
    <string name="mix_vegitable">Mix Vegitable</string>
    <string name="search_all_farmer_products">Search All Farmer Products</string>
    <string name="image">image</string>
    <string name="hello_farmer">Hello, Farmer</string>
    <string name="vegimage">vegImage</string>
    <string name="up_to_30_off">Up To 30% OFF</string>
    <string name="_2_kg">2 kg</string>
    <string name="_350">₹350</string>
    <string name="add">Add</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="vegitables_basket">Vegitables Basket</string>
    <string name="_5_items">(5 items)</string>
    <string name="payment_details">Payment Details</string>
    <string name="mrp_total">MRP Total</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_discount">Total Discount</string>
    <string name="view_all">View All</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="delivery_contact_details">Delivery Contact Details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_details">Address Details</string>
    <string name="pin_code">Pin Code</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="landmark_area">Landmark / Area</string>
    <string name="will_be_used_to_assist_delivery">Will be used to assist delivery</string>
    <string name="city_state">City , State</string>
    <string name="flat_house_no">Flat/House No.</string>
    <string name="floor_no">Floor No.</string>
    <string name="tower_no">Tower No.</string>
    <string name="building_apartment_name">Building / Apartment Name</string>
    <string name="save_as">Save as</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="save_address">Save Address</string>
    <string name="edit">Edit</string>
    <string name="order_history">Order History</string>
    <string name="wishlist">Wishlist</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="default_address">Default Address :</string>
    <string name="delete">Delete</string>
    <string name="select_gender">Select Gender</string>
    <string name="editProfile">Edit Profile</string>
    <string name="select_dob">Select DOB</string>
    <string name="save">Save</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="view_details">View Details</string>
    <string name="need_help">Need Help</string>
    <string name="myOrders">My Orders</string>
    <string name="order_status">Order Status</string>
    <string name="track_order">Track Order</string>
    <string name="shipped">Shipped</string>
    <string name="ordered">Ordered</string>
    <string name="under_process">Under Process</string>
    <string name="delivered">Delivered</string>
    <string name="bill_details">Bill Details</string>
    <string name="mrp">MRP</string>
    <string name="product_discount">Product Discount</string>
    <string name="bill_total">Bill Total</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order Id</string>
    <string name="paid_online">Paid Online</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="deliver_to">Deliver To</string>
    <string name="order_placed">Order Placed</string>
    <string name="reorder">Reorder</string>
    <string name="myOrdersDetails">My Order Details</string>
    <string name="orderSummary">Order Summary</string>
    <string name="addCart">Add To Cart</string>
    <string name="place_order">Place Order</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_coupon_discount">Coupon Discount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="change_add_address">Change/Add Address</string>
    <string name="addAdress">Add Address</string>
    <string name="ordering">Ordering</string>
    <string name="faq">FAQ</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="str_null" />
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="password_not_matched">Password is not matched</string>
    <string name="cnf_password_required">Confirm Password is required</string>
    <string name="password_required">Password is required</string>
    <string name="old_password_required">Old Password is required</string>
    <string name="address_required">Address is required</string>
    <string name="city_required">City is required</string>
    <string name="pincode_required">Pincode is required</string>
    <string name="gender_required">Gender is required</string>
    <string name="state_required">State is required</string>
    <string name="dob_required">DOB is required</string>
    <string name="valid_mobile_number_required">Valid Mobile Number is required</string>
    <string name="valid_email_required">Valid Email Id is required</string>
    <string name="valid_email_mobile_required">Valid Email/Mobile is required</string>
    <string name="username_required">Username is required</string>
    <string name="otp_required">OTP is required</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="mobile_required">Mobile is required</string>
    <string name="email_and_mobile_required">Email/Mobile is required</string>
    <string name="enter_username">Enter Username</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="select_state">Select State</string>
    <string name="city">City</string>
    <string name="profile_successfully_update">Profile Successfully Update</string>
    <string name="change_mobile_email">Change Email/Mobile</string>
    <string name="email_mobile_username">Email/Mobile/Username</string>
    <string name="enter_email_mobile_username">Enter Email/Mobile/Username</string>
    <string name="enter_email_mobile">Enter Email/Mobile</string>
    <string name="welcome">Welcome</string>

</resources>