<?xml version="1.0" encoding="utf-8"?>
<layout>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/recycler_view">

    <ScrollView
        style="@style/scroll_view"
        android:padding="@dimen/screen_padding">

        <LinearLayout style="@style/linear_layout_vertical">

            <ImageView
                style="@style/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/lblUsernameType"
                android:gravity="center_horizontal"
                style="@style/text_view"
                android:text="@string/otp_sent_to_your_mobile_number" />
            <LinearLayout
                android:layout_marginTop="15dp"
                style="@style/linear_layout_horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:textSize="18sp"
                    android:id="@+id/lblUsername"
                    android:gravity="center_horizontal"
                    style="@style/text_view"
                    android:layout_width="wrap_content"
                    android:text="@string/mobile_number" />
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_pencil"
                    style="@style/image_view"
                    />
            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/timer"
                android:gravity="center_horizontal"
                style="@style/text_view"
                android:text="@string/_11_12_00" />

            <EditText
                android:id="@+id/edtotp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enter_otp_here"
                android:layout_width="200dp"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:maxLength="6"
                android:textSize="20sp"
                style="@style/edit_text_bordered_black"/>

            <Button
                android:id="@+id/btnVerify"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                style="@style/button_green"
                android:text="@string/verify_otp"
                android:layout_width="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/btnResend"
                android:gravity="center_horizontal"
                style="@style/text_view"
                android:text="@string/resnd_otp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_progress_bar" />
</RelativeLayout>
</layout>

