<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"/>

    <TextView
        android:id="@+id/tvDeliveryDetails"
        android:text="@string/delivery_contact_details"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/txtMonBold"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"/>


    <TextView
        android:id="@+id/tvDeliveryDetails1"
        android:text="@string/will_be_used_to_assist_delivery"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvDeliveryDetails"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/txtMonReg"
        android:textColor="@color/colorGray"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:visibility="visible"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:id="@+id/inputlayoutName"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvDeliveryDetails"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/txtMonReg"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/inputlayoutPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputlayoutName"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/txtMonReg"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAddressDetails"
        android:text="@string/address_details"
        app:layout_constraintTop_toBottomOf="@+id/inputlayoutPhoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/txtMonBold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/inputlayoutPinCode"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressDetails"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_code"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/txtMonReg"
            />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>