<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


<RelativeLayout style="@style/card_layout"
    android:background="@color/colorGray3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="@color/white"
        android:gravity="center"
        style="@style/linear_layout_vertical"
        android:padding="2dp">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:elevation="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

         <ImageView
             android:layout_gravity="center_horizontal"
             android:id="@+id/image"
             style="@style/image_view"
             android:contentDescription="@string/vegimage"
             android:src="@drawable/veg1"
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_100sdp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:padding="2dp"
            android:gravity="center_horizontal"
            android:id="@+id/category"
            style="@style/txtMonReg"
            android:text="@string/mix_vegitable"
            android:textSize="13sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/uptoOffer"
            style="@style/txtMonBoldOffer"
            android:text="@string/up_to_30_off"
            />
    </LinearLayout>
</RelativeLayout>
</layout>